[Extensions] Fix ExtensionMsg_Loaded_Params

The ExtensionMsg_Loaded_Params had a number of issues:
- it never pickled the id
- it never pickled the tab specific permissions
- it didn't use the explicit id when constructing the extension

The latter is useful to safe work in the normal case, and important in
tests since test extensions may not have keys or paths.

BUG=640837

Review-Url: https://codereview.chromium.org/2279013002
Cr-Commit-Position: refs/heads/master@{#414600}

Former-commit-id: 2b3723bc43398ea016a3d109430492784b2be234